Run black and update lock file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/bin/python",
+    "python.pythonPath": "/Users/martin.abeleda/Library/Caches/pypoetry/virtualenvs/ai-auto-challenge-8Bk70fx4-py3.8/bin/python",
     "editor.rulers": [
         120
     ],
