--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
     hooks:
       - id: pylint
         name: Code Quality
-        entry: poetry run pylint --rcfile .pylintrc clover
+        entry: poetry run pylint --rcfile .pylintrc ai_auto_challenge
         language: system
         types: [python]
   - repo: local
