--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ autopep8 = "^1.5.5"
 pylint = "^2.6.0"
 black = "^20.8b1"
 pre-commit = "^2.12.1"
+pytest-cov = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
