--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "--use-parentheses",
         "--line-width=120",
         "--section-default=THIRDPARTY",
+        "--project=app",
         "--force-sort-within-sections"
     ],
     "python.testing.pytestEnabled": true,
