--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
-version: "3.4"
-
+version: "3.8"
 services:
-  api:
-    build: .
+  predictor:
+    container_name: "predictor"
+    image: "martinabeleda/ai-auto-challenge:latest"
+    build: ./
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 80
     volumes:
-      - .:/app
+        - .:/app
     ports:
-      - 5000:5000
+      - 8080:80
