--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.8"
 tensorflow = "^2.4"
 fastapi = "^0.63.0"
 celery = "^5.0.5"
+python-multipart = "^0.0.5"
+Pillow = "^8.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
