--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ repository = "https://github.com/martinabeleda/ai-auto-challenge/"
 python = "^3.8"
 tensorflow = "^2.4"
 fastapi = "^0.63.0"
-celery = "^5.0.5"
 python-multipart = "^0.0.5"
 Pillow = "^8.2.0"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -20,6 +20,7 @@ pylint = "^2.6.0"
 black = "^20.8b1"
 pre-commit = "^2.12.1"
 pytest-cov = "^2.11.1"
+locust = "^1.4.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
